Revision history for the Perl library Validation::Class

7.900000  2012-11-18

  - Created Validation::Class::Directive::City

  - Created Validation::Class::Directive::State

  - Created Validation::Class::Directive::Zipcode

  - Created Validation::Class::Directive::Creditcard

  - Created Validation::Class::Directive::Date

  - Created Validation::Class::Directive::Time

  - Created Validation::Class::Directive::Decimal

  - Created Validation::Class::Directive::Email

  - Created Validation::Class::Directive::Hostname

  - Created Validation::Class::Directive::SSN

  - Created Validation::Class::Directive::Telephone

  - Created Validation::Class::Directive::UUID

  - Created Validation::Class::Whitepaper

  - Changed the version number scheme (again) to slow down incrementing of the major number

  - Created Validation::Class::Simple for ad-hoc validation needs

  - Created various container classes, .e.g. Fields, Params, Directives, etc

  - Created various base classes, .e.g. Core, Mapping, Listing, etc

  - Rewrite of all documentation iteratively, under the Validation::Class::Manual namespace

  - Rewrite of Validation::Class, main module provides sugar for configuration only

  - Rewrite of Validation::Class::Prototype, now is configurable using OO

  - Added the Multiples directive which better enforces array handling

  - Renamed the clone method to clone_field

  - Removed inheritence support via 'base' as it existed in 7.85

  - Removed the object keyword and support as it existed in 7.85

7.85  2012-09-21

  - The load/set and object/obj keywords documentation has been moved into the intro document under hidden features

  - Fixed Class::Forward version dependency which cause test failures in previous versions

7.84  2012-09-20

  - The import method has been modified to copy/merge meta-class configs based on inheritance

7.82  2012-08-13

  - The class method/functionality has been refactored and is now using Class::Forward
