@@ -22,7 +22,6 @@
     has 'mixin'     => 0;
     has 'field'     => 1;
     has 'multi'     => 0;
-    
 
     has 'message'   => '%s was not processed successfully';
     has 'validator' => sub {};
