@@ -1,0 +1,26 @@
+# ABSTRACT: Messages Directive for Validation Class Field Definitions
+
+package Validation::Class::Directive::Messages;
+
+use strict;
+use warnings;
+
+use base 'Validation::Class::Directive';
+
+use Validation::Class::Core;
+
+# VERSION
+
+=head1 DESCRIPTION
+
+Validation::Class::Directive::Messages is a core validation class field directive
+that provides the ability to do some really cool stuff only we haven't
+documented it just yet.
+
+=cut
+
+has 'mixin' => 1;
+has 'field' => 1;
+has 'multi' => 0;
+
+1;
